--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,7 +3,7 @@
 .VuePagination__count {
     display: none;
 }
-.edumall-pagination {
+.EduMall-pagination {
     ul {
         @apply mt-10 flex justify-center space-x-2;
     }
